# beauilt_agent

./: .env.example  .gitignore  CLAUDE.md  DEVELOPER_CHECKLIST.md  DEVELOPMENT_GUIDE.md  HOW_ROUTER_WORKS.md  LANGCHAIN_VS_LANGGRAPH.md  LANGGRAPH_MIGRATION.md  QUICK_START.md  README.md  SETUP_CHECKLIST.md  SETUP_UV.md  STREAMLIT_DEPLOY.md  USAGE_EXAMPLES.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
agents/: __init__.py  base_agent.py  care_guide_agent.py  ingredient_analysis_agent.py  simulation_agent.py  skin_analysis_agent.py  skin_diagnosis_agent.py  web_search_agent.py
config/: __init__.py  settings.py
data/: DATA_GUIDE.md  README.md  피부관리의기초.md
data/ingredient_cards/: 01_히알루론산.md  02_세라마이드.md  03_나이아신아마이드.md
data/skin_type_cards/: 01_건성피부.md  02_지성피부.md  03_복합성피부.md  04_수분부족형지성.md  05_민감성피부.md  06_장벽손상의심.md  07_각질과다.md  08_피지과다.md  09_트러블반복.md  10_홍조경향.md  11_환경자극민감.md  REFERENCES.md
db/: chat_history.py  tracker.py
docs/: developer_assessment_현재구현수준.md  stakeholder_meeting_뷰티챗봇_역할회의.md
scripts/: __init__.py  add_document.py  init_vector_db.py
vector_db/: __init__.py  vector_store.py
workflow/: __init__.py  chat_handler.py  graph.py  nodes.py  router.py  state.py
